# CPP-TableTennis-Game

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  make.sh  package.json  server.cpp
dev/: Versus2.af
node/: index.js
res/ai/: Versus.ai  Versus2.ai
res/illustrator/: ball.ai  ballshadow.ai  indicator.ai  logo.ai  logo.psd  powerbar.ai  powerbox.ai  racket.ai  table.ai
res/reference/: model.bbmodel
scripts/: generate_index.js
src/: animationmanager.cpp  animationmanager.h  ballentity.cpp  ballentity.h  componentsystem.cpp  componentsystem.h  cursormanager.cpp  cursormanager.h  ecsmanager.cpp  ecsmanager.h  entitybase.cpp  entitybase.h  errormanager.cpp  errormanager.h  fontmanager.cpp  fontmanager.h  gamemanager.cpp  gamemanager.h  keyboardmanager.cpp  keyboardmanager.h  netmanager.cpp  netmanager.h  rendermanager.cpp  rendermanager.h  rendertarget.cpp  renderwindow.cpp  renderwindow.h  shadowentity.cpp  shadowentity.h  soundmanager.cpp  soundmanager.h
src/animations/: animationmanager.h  easings.cpp  fadeanimation.cpp  swipeanimation.cpp
src/components/: ballmovement.cpp  ballmovement.h  bubbledrawer.cpp  bubbledrawer.h  button.cpp  button.h  component.h  componentsystem.cpp  componentsystem.h  cursor.cpp  cursor.h  debugger.cpp  debugger.h  error.cpp  error.h  index.h  menuballbehaviour.cpp  menuballbehaviour.h  menutitle.cpp  menutitle.h  nineslice.cpp  nineslice.h  onstart.cpp  onstart.h  powerbar.cpp  powerbar.h  prediction.cpp  prediction.h  shadowtransformer.cpp  shadowtransformer.h  spriterenderer.cpp  spriterenderer.h  textinput.cpp  textinput.h  textrenderer.cpp  textrenderer.h  transform.cpp  transform.h
src/ecs/: ecs.cpp  ecs.h  ecsmanager.cpp  ecsmanager.h
src/ecs/components/: ballmovement.cpp  ballmovement.h  bubbledrawer.cpp  bubbledrawer.h  button.cpp  button.h  debugger.h  index.h  menuballbehaviour.cpp  menuballbehaviour.h  menutitle.cpp  menutitle.h  nineslice.cpp  nineslice.h  powerbar.cpp  powerbar.h  prediction.cpp  prediction.h  shadowtransformer.cpp  shadowtransformer.h  spriterenderer.cpp  spriterenderer.h  textinput.cpp  textinput.h  textrenderer.cpp  textrenderer.h  transform.cpp  transform.h
src/ecs/presets/: button.cpp  index.h  textinput.cpp
src/entity/: component.cpp  component.h  entity.cpp  entity.h  entitymanager.cpp  entitymanager.h
src/entity/components/: spriterenderer.cpp  spriterenderer.h
src/game/: gamemanager.cpp  gamemode.h  tableside.h
src/gameplay/: clickmanager.cpp  clickmanager.h  component.h  gamemanager.cpp  gamemanager.h  gamemode.h  tableside.h
src/gameplay/components/: ballmovement.cpp  ballmovement.h  clickmanager.cpp  clickmanager.h  (+10 more)
src/managers/: animationmanager.cpp  animationmanager.h  cursormanager.cpp  cursormanager.h  ecsmanager.cpp  ecsmanager.h  errormanager.cpp  errormanager.h  fontmanager.cpp  fontmanager.h  gamemanager.cpp  gamemanager.h  keyboardmanager.cpp  keyboardmanager.h  netmanager.cpp  netmanager.h  soundmanager.cpp  soundmanager.h
src/menu/: pane.cpp  pane.h
src/panes/: game.cpp  game.h  home.cpp  home.h  lobby.cpp  lobby.h  pane.cpp  pane.h
src/presets/: button.cpp  error.cpp  index.h  textinput.cpp
src/render/: fontmanager.cpp  fontmanager.h  renderindexes.h  rendermanager.h  rendertarget.h  renderwindow.cpp  renderwindow.h
src/shared/: buffer.cpp  buffer.h  enet.h  packets.h
src/sound/: soundmanager.cpp  soundmanager.h
src/utility/: Vector2.cpp  circle.cpp  circle.h  magic_enum.hpp  mathutil.cpp  mathutil.h  renderindexes.h  renderwindow.cpp  renderwindow.h  vector2.cpp  vector2.h  vector2int.cpp  vector2int.h  vector3.cpp  vector3.h  vector3int.cpp  vector3int.h
